03-gitops/archive/tempo/tempo-ingress.yaml
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: tempo-ui
#  namespace: monitoring
#  annotations:
#    cert-manager.io/cluster-issuer: ingress
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: tempo.cluster
#      http:
#        paths:
#          - path: /
#            pathType: Prefix
#            backend:
#              service:
#                name: tempo
#                port:
#                  number: 3100
#  tls:
#    - hosts:
#        - tempo.cluster
#      secretName: tempo-tls
#---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tempo-public-ui
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://oauth.serhii.link/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://oauth.serhii.link/oauth2/start?rd=https://$host$request_uri"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: tempo.serhii.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tempo
                port:
                  number: 3100
